ghc-4335c07/testsuite/tests/patsyn/should_fail/records-poly-update.stderr

records-poly-update.hs:11:14: error:
    • Couldn't match expected type ‘Bool’ with actual type ‘A’
    • In the ‘j’ field of a record
      In the expression: p1 {j = A}
      In an equation for ‘p6’: p6 = p1 {j = A}
